// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardView renders a loading indicator during the loading 1`] = `
<div
  className={undefined}
>
  Loading
</div>
`;

exports[`DashboardView renders an error card for an error 1`] = `
<div
  className="card errorcard"
>
  <div
    className="card-body"
  >
    <h1
      className="title-l"
    >
      An error has occurred
    </h1>
    <p>
      Please contact the administrator to try to find a solution (code: 500)
    </p>
  </div>
</div>
`;

exports[`DashboardView renders an error card for an unsupported state 1`] = `
<div
  className="card errorcard"
>
  <div
    className="card-body"
  >
    <h1
      className="title-l"
    >
      The dashboard is in an unsupported state: INITIAL__STATE
    </h1>
    <p>
      Contact your administrator to find a suitable solution (code: 1001)
    </p>
  </div>
</div>
`;

exports[`DashboardView renders the projects 1`] = `
<div
  className="dashboardview"
>
  <div
    className="info"
  >
    <div
      className="card infocard projectsinfo"
    >
      <div
        className="card-body"
      >
        <h1
          className="infocard-title"
        >
          0
        </h1>
        <p
          className="infocard-message"
        >
          Projects
        </p>
      </div>
    </div>
    <div
      className="card infocard viewpointsinfo"
    >
      <div
        className="card-body"
      >
        <h1
          className="infocard-title"
        >
          27
        </h1>
        <p
          className="infocard-message"
        >
          Viewpoints
        </p>
      </div>
    </div>
    <div
      className="card infocard metamodelsinfo"
    >
      <div
        className="card-body"
      >
        <h1
          className="infocard-title"
        >
          132
        </h1>
        <p
          className="infocard-message"
        >
          Metamodels
        </p>
      </div>
    </div>
  </div>
  <div
    className="projects"
  >
    <div
      className="projects-body"
    >
      <div
        className="card infocard newprojectinfo"
      >
        <a
          href="/newproject"
          onClick={[Function]}
        >
          <div
            className="card-body"
          >
            <h1
              className="infocard-title"
            >
              +
            </h1>
            <p
              className="infocard-message"
            >
              New Project
            </p>
          </div>
        </a>
      </div>
      <div
        className="card projectsummarycard"
      >
        <div
          className="card-header"
        >
          <a
            href="/projects/First Project"
            onClick={[Function]}
          >
            <h1
              className="card-title title-l"
            >
              First Project
            </h1>
          </a>
        </div>
      </div>
      <div
        className="card projectsummarycard"
      >
        <div
          className="card-header"
        >
          <a
            href="/projects/Second Project"
            onClick={[Function]}
          >
            <h1
              className="card-title title-l"
            >
              Second Project
            </h1>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
